RESOLVED FIXED284996
Fix internal build on old macOS after 288125@main
https://bugs.webkit.org/show_bug.cgi?id=284996
Summary Fix internal build on old macOS after 288125@main
Alex Christensen
Reported 2024-12-19 17:44:01 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-19 17:44:14 PST
Alex Christensen
Comment 2 2024-12-19 17:46:09 PST
EWS
Comment 3 2024-12-19 17:57:04 PST
Committed 288137@main (f1f8c8cd1f74): <https://commits.webkit.org/288137@main> Reviewed commits have been landed. Closing PR #38247 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.