Fix internal build on old macOS after 288125@main https://bugs.webkit.org/show_bug.cgi?id=284996 rdar://141791918

Unreviewed.

* Source/WebCore/PAL/pal/spi/cocoa/CoreMaterialSPI.h:

Canonical link: https://commits.webkit.org/288137@main